# fast-lib

./: .travis.yml  CMakeLists.txt  README.md  kommunikation.md
cmake/Modules/: FindMosquitto.cmake  FindMosquittopp.cmake  FindYamlCpp.cmake
communication/: CMakeLists.txt  communicator.hpp  mqtt_communicator.cpp  mqtt_communicator.hpp
examples/: CMakeLists.txt
examples/comm_serial/: CMakeLists.txt  main.cpp
examples/communication/: CMakeLists.txt  main.cpp
include/fast-lib/: communicator.hpp  log.hpp  mqtt_communicator.hpp  optional.hpp  serializable.hpp
include/fast-lib/message/agent/: init.hpp  init_agent.hpp  stop_monitor.hpp
include/fast-lib/message/agent/mmbwmon/: reply.hpp  restart.hpp  stop.hpp
include/fast-lib/message/migfra/: dhcp_info.hpp  ivshmem.hpp  pci_addr.hpp  pci_id.hpp  result.hpp  task.hpp  time_measurement.hpp
serialization/: CMakeLists.txt  init.cpp  init.hpp  init_agent.cpp  init_agent.hpp  serializable.cpp  serializable.hpp  stop_monitor.cpp  stop_monitor.hpp
serialization/messages/: init.hpp  init_agent.hpp  stop_monitor.cpp  stop_monitor.hpp
src/: log.cpp  mqtt_communicator.cpp  serializable.hpp
src/message/agent/: init.cpp  init.hpp  init_agent.cpp  init_agent.hpp  stop_monitor.cpp  stop_monitor.hpp
src/message/agent/mmbwmon/: reply.cpp  system_info.cpp
src/message/migfra/: dhcp_info.cpp  ivshmem.cpp  pci_addr.cpp  pci_id.cpp  result.cpp  task.cpp  time_measurement.cpp
test/: CMakeLists.txt  communication.cpp  optional_test.cpp  task.cpp  task_test.cpp
